// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> snapshots renders default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(0,0%,96%);
  border-radius: 4px;
  border: 2px solid #cfcfcf;
  color: hsl(0,0%,10%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,10%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  icon=""
  title=""
  type="default"
>
  <div
    className="c1"
  >
    
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders error 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #c7254e;
  border-radius: 4px;
  border: 2px solid #861935;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  icon=""
  title=""
  type="error"
>
  <div
    className="c1"
  >
    
    Error
  </div>
</div>
`;

exports[`<Alert /> snapshots renders icon if provided 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(0,0%,96%);
  border-radius: 4px;
  border: 2px solid #cfcfcf;
  color: hsl(0,0%,10%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,10%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  icon="warning"
  title=""
  type="default"
>
  <div
    className="c1"
  >
    
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #38bd93;
  border-radius: 4px;
  border: 2px solid #278265;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  icon=""
  title=""
  type="success"
>
  <div
    className="c1"
  >
    
    Success
  </div>
</div>
`;

exports[`<Alert /> snapshots renders title if provided 1`] = `
.c3 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 16px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(0,0%,96%);
  border-radius: 4px;
  border: 2px solid #cfcfcf;
  color: hsl(0,0%,10%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,10%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  margin-bottom: 0.5em;
}

<div
  className="c0"
  icon=""
  title="title"
  type="default"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      
      <span
        className="c3"
      >
        title
      </span>
    </div>
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders warning 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #d4ab27;
  border-radius: 4px;
  border: 2px solid #93771b;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  icon=""
  title=""
  type="warning"
>
  <div
    className="c1"
  >
    
    Warning
  </div>
</div>
`;
